--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.8.1
+dj-database-url==3.0.0
 Django==5.2.3
 django-admin-interface==0.30.1
 django-colorfield==0.14.0
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
 pillow==11.2.1
+python-dotenv==1.1.0
 python-slugify==8.0.4
 sqlparse==0.5.3
 text-unidecode==1.3
-gunicorn
+typing_extensions==4.14.0
+whitenoise==6.9.0
