--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ django-admin-interface==0.30.1
 django-colorfield==0.14.0
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
+gunicorn==23.0.0
+packaging==25.0
 pillow==11.2.1
 python-dotenv==1.1.0
 python-slugify==8.0.4
